{
    "name": "Player_Actions",
    "maps": [
        {
            "name": "Movement_Map",
            "id": "21c9d47b-e000-4ff3-993d-a575d4f50d4b",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "52ab0b1b-396c-49c4-b247-0cc2a7dccc41",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Player_Rotation",
                    "type": "Value",
                    "id": "020c77fd-b7cc-4239-9e24-fc7b7dd24284",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Dash",
                    "type": "Button",
                    "id": "f1eb59ec-7342-4f19-a411-77d69b72832c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "Movement_Vector",
                    "id": "7fc45864-e1c1-4b78-ba7b-b2f70ab5b21d",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "37e90e8e-ad55-4cf0-9e9b-f32d17085e5d",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "cb6b5d1c-7338-426c-a98c-a102cf5f6367",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "44fe033e-a242-4ee5-b18b-81385b06b1d7",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "d403a604-fc1f-4da5-9fb8-adb9b8da358a",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "0c08bc24-7d77-4c85-b2b3-74166f72fd71",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "Dash",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9bc8b02e-33a9-4fd2-90f4-7a2cc348ce5b",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "Player_Rotation",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Menu_Map",
            "id": "f54f9bdf-4a44-4043-a66f-80d1b1b037cc",
            "actions": [
                {
                    "name": "Open_Pause_Menu",
                    "type": "Button",
                    "id": "e9484613-1888-4ead-9069-f59661aa87e6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "OpenConsole",
                    "type": "Button",
                    "id": "748a777f-d098-4d6d-a859-78151d58f325",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "UpArrow",
                    "type": "Button",
                    "id": "b845a704-915a-4916-b4cb-5278512786d8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "DownArrow",
                    "type": "Button",
                    "id": "0dd18f57-7a9c-4d26-986d-abf4527847ba",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Enter",
                    "type": "Button",
                    "id": "5070a6ab-fa1f-4c52-81bd-bbc095d4d447",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d89800ed-d987-4cbe-9b8f-72a9dee9c139",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "Open_Pause_Menu",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c759343a-8e22-45cf-b581-8ae6b9f20917",
                    "path": "<Keyboard>/backquote",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OpenConsole",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1dc0a8ab-e0be-48eb-8660-140dd190b6e3",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UpArrow",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f2343774-f106-483b-a4f0-516438a80161",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DownArrow",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9d4bb3b2-a9d8-4671-9cc8-ead73589534b",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Enter",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Combat_Map",
            "id": "0c405ff2-6602-4083-bb7d-cec728558da1",
            "actions": [
                {
                    "name": "Shooting",
                    "type": "Button",
                    "id": "fdb7bd40-ff62-47b3-926d-e1cdd1e68286",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Use_Ability_1",
                    "type": "Button",
                    "id": "a7d98704-076c-4310-9d58-551e8e473491",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Use_Ability_2",
                    "type": "Button",
                    "id": "6411a62f-9b91-4fc2-9371-905b1bd6bd15",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Reload_Weapon",
                    "type": "Button",
                    "id": "8cf911a0-c48f-4894-ae84-f713cb6a1fb8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "6cc033eb-f71e-481a-8e2f-3e25ac0b15a9",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "Shooting",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6b37e29d-11b6-4e74-b78b-2bf7bde0eab9",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "Use_Ability_1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8779681f-d49e-4c61-b99d-c0d576ff6afe",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "Use_Ability_2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c8f5efea-6b7f-452d-8e34-08aade84b5d9",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "Reload_Weapon",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Other_Map",
            "id": "1f75fba5-73fd-4042-ab0c-200569d5b462",
            "actions": [
                {
                    "name": "Interaction",
                    "type": "Button",
                    "id": "209d4ecd-b9a5-4f27-a91b-155e5a866730",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Free_Camera",
                    "type": "Button",
                    "id": "8ec5b542-75af-4f1f-92ca-87fb23cb2ef2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "34842b69-763c-4f3e-a227-385006f99115",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "Interaction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6acbb4ec-e524-4eb0-be7b-ead551166848",
                    "path": "<Keyboard>/f10",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "Free_Camera",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard and Mouse",
            "bindingGroup": "Keyboard and Mouse",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}